@@ -6,7 +6,7 @@ Name:		globus-gass-copy
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	9.26
+Version:	9.27
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus Gass Copy
@@ -210,6 +210,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Fri Apr 21 2017 Globus Toolkit <support@globus.org> - 9.27-1
+- prevent some race conditions
+
 * Fri Apr 21 2017 Globus Toolkit <support@globus.org> - 9.26-1
 - remove checksum data from public handle
 
