@@ -1,3 +1,9 @@
+globus-gass-copy (9.27-1+gt6.@distro@) @distro@; urgency=low
+
+  * prevent some race conditions
+
+ -- Globus Toolkit <support@globus.org>  Fri, 21 Apr 2017 14:47:27 -0500
+
 globus-gass-copy (9.26-1+gt6.@distro@) @distro@; urgency=low
 
   * remove checksum data from public handle
